# CS202-Group-Project

./: CMakeLists.txt  Makefile  README.md  platformer_main.cpp  velocity.hpp
cmake/: FindGLM.cmake  FindSFML.cmake
config/: platformerConfig.hpp.in
levels/: level_one.txt
res/shaders/: simpleFragment.frag
src/: camera.cpp  camera.hpp  dynamic.cpp  dynamic.hpp  dynamic.hpp.gch  game.cpp  game.hpp  gameObjectFactory.cpp  gameObjectFactory.hpp  gameObjects.cpp  gameObjects.hpp  mesh.cpp  mesh.hpp  platformerConfig.hpp  platformerMain.cpp  shader.cpp  shader.hpp  textParser.cpp  textParser.hpp  tiny_obj_loader.h  velocity.cpp  velocity.hpp  velocity.hpp.gch
